On branch master

--- a/jxjx.html
+++ b/jxjx.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="jxjx.css" type="text/css"/>
 <style>
 p {
   text-align: center;
@@ -24,10 +25,10 @@ p {
                             <td colspan="4" >Christmas Countdown</td>
                         </tr>
                         <tr id="clockId">
-                            <td id="days">120</td>
-                            <td id="hours">4</td>
-                            <td id="minutes"> 40</td>
-                            <td id="seconds"> 30</td>
+                            <td id="days"></td>
+                            <td id="hours"></td>
+                            <td id="minutes"></td>
+                            <td id="seconds"></td>
                         </tr>
                     </table>
     <script>
